Removed all references to "work" in the work/energy tab of The Ramp, including graphs and bar charts
Removed the force graph from the work/energy tab of The Ramp
Renamed the "work/energy" ramp tab to "Energy"
Fixed the layout of the "Energy" tab to match the "Force Graphs" tab
# 1.03.41 (35095) Sep 17, 2009
Fixed: Physics errors when frictionless + brick (inelastic collision); object jumps through wall or gains a great deal of velocity, especially when at an angle
Fixed: Switching to ice should clear heat
Added icicles to the frozen ramp graphics
Added icons for wood and ice surface radio buttons
Made clear heat instant if sim is paused, otherwise sends a fire dog
Made it so the chart series controls and units labels don't overlap with the vertical text label on the slider.
Fixed: Chart series controls should be centered on the chart, not against the top of the chart (esp. if only one control); this will help improve layouts
Fix layout for ramp: work/energy tab, play area is unusable for some aspect ratios
Make sure all play areas are visible on the stage
Fixed: For charts with a single series, should have the text label above the text box and units to improve layout
Fixed: Velocity and position series controls shouldn't have checkboxes.
Added the wall force to the forces and motion series charts
Added spring graphics for bouncy walls
Improved ramp color for ice mode
Added a control for wall bounce independent of surface friction
Renamed "frictionless" control to "surface"
# 1.03.40 (34937) Sep 10, 2009
forces-and-motion: Removed gravity and wall force from chart 
Made it so when the user changes kinetic friction, that static is changed so that static >= kinetic
Made it so when the user changes static friction, that kinetic is changed so that static >= kinetic
Made sim have friction by default
moving-man: Added velocity and acceleration vectors
Fixed: Position slider is buggy after implementation of position smoothing